--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -3,6 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -14,16 +15,38 @@
 
         <div class="row mt-5">
             <div class="col shadow">
+                <div>
+                    <span> 여행 계획</span>
+                <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1" checked>
+                <label class="btn" for="option1">당일치기</label>
+
+                <input type="radio" class="btn-check" name="schedule" id="option2" value="2" autocomplete="off">
+                <label class="btn" for="option2">1박 2일</label>
+
+                <input type="radio" class="btn-check" name="schedule" id="option3" value="3" autocomplete="off">
+                <label class="btn" for="option3">2박 3일</label>
+                    <span>일행</span>
+                    <input type="radio" class="btn-check" name="companion" id="option4" value="1" autocomplete="off" checked>
+                    <label class="btn" for="option4">혼자 여행</label>
+
+                    <input type="radio" class="btn-check" name="companion" id="option5" value="2"  autocomplete="off">
+                    <label class="btn" for="option5">커플 여행</label>
+
+                    <input type="radio" class="btn-check" name="companion" id="option6" value="3" autocomplete="off">
+                    <label class="btn" for="option6">가족 여행</label>
+                </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">제목</label>
                     <input type="text" class="form-control" th:field="*{title}" id="title" placeholder="조잘조잘 제목 부분">
+                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"  class="fieldError">
                 </div>
                 <div class="mb-3">
                     <label for="content" class="form-label">내용</label>
                     <textarea class="form-control" id="content" rows="3" th:field="*{content}"></textarea>
+                    <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}"  class="fieldError">
                     <div class="text-center mt-4">
                         <button type="submit" class="btn btn-light">저장</button>
-                        <a type="button" class="btn btn-light">목록</a>
+                        <a type="button" href="/blog/list" class="btn btn-light">목록</a>
 
                     </div>
                 </div>
