--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -9,33 +9,36 @@
 </head>
 <body>
 <div class="container">
-    <div class="row">
+
+    <div class="row mt-5">
         <div class="col-6 offset-3">
-            <form th:action="@{/account/login}" method="post" class="login-form">
                 <h1 class="center">로그인</h1>
-                <div class="form-group">
-                    <label class="form-label" for="email">아이디/이메일:</label>
-                    <input type="text" id="email" name="email"  class="login-form form-control" required />
+                <form action="/account/login" method="post">
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger mt-4">
+                        사용자ID/email 또는 비밀번호를 확인해주세요
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="form-label" for="password">비밀번호:</label>
-                    <input type="password" id="password" name="password" class="login-form form-control" required />
+
+                <div class="mb-3 mt-3">
+                    <label class="form-label" for="email">아이디/이메일</label>
+                    <input type="email" id="email" name="email"  class="form-control" placeholder="name@example.com" required />
                 </div>
+
+                <div class="mb-3 mt-3">
+                    <label class="form-label" for="password">비밀번호</label>
+                    <input type="password" id="password" name="password" class="form-control" required />
+                </div>
+
                 <div class="text-center mt-3">
-                    <button type="submit" class="btn btn-success">로그인</button>
+                    <button class="btn btn-success">로그인</button>
+                    <a type="button" href="/blog/list" class = "btn btn-success"> 목록 </a>
                 </div>
-            </form>
+                </form>
         </div>
     </div>
 </div>
-<script th:inline="javascript">
 
-    let msg = [[${errorss}]]
-    if (msg != null) {
-        alert(msg)
-    }
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
