--- a/src/main/resources/templates/blog/detale.html
+++ b/src/main/resources/templates/blog/detale.html
@@ -39,7 +39,199 @@
         <a th:href="@{/blog/modify(num=${blogDTO.num})}">수정</a>
     </div>
 
-</div>
+
+    <div class="row mt-5">
+        <div class="col shadow">
+
+            <form action="/replyblog/register" method="post" th:object="${replyBlogDTO}">
+                <input type="text" name="content" placeholder="댓글 입력 창"></input>
+                <input name="blog_num" th:value="${blogDTO.num}" type="hidden">
+                <button type="submit">댓글 입력</button>
+                <a href="/blog/list" type="button" class="btn btn-dark">목록으로 돌아가기</a>
+            </form>
+
+            <th:block th:if="${#lists.isEmpty(pageResponseDTO.dtoList)}">
+                <h1>너님 글이 없음</h1>
+            </th:block>
+
+            <th:block th:unless="${#lists.isEmpty(pageResponseDTO.dtoList)}">
+
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">글번호</th>
+                        <th scope="col">내용</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <th:block th:each="list: ${pageResponseDTO.dtoList}">
+                        <tr>
+                            <td>
+                                <div>
+                                    [[${list.num}]]
+                                </div>
+
+                            </td>
+
+                            <td>
+                                <div>
+                                    [[${list.content}]]
+                                </div>
+
+                            </td>
+                            <td>
+                                <button id="replyModify" type="button" class="btn btn-dark replyModify"
+                                        data-bs-toggle="modal" data-bs-target="#exampleModal" th:value="${list.num}">
+                                    수정
+                                </button>
+
+                                <form action="/replyblog/delete" method="get">
+                                    <input name="num" type="hidden" th:value="${list.num}">
+                                    <input name="blognum" type="hidden" th:value="${blogDTO.num}">
+                                    <button class="btn btn-dark">삭제</button>
+
+                                </form>
+                                <!-- Button trigger modal -->
+
+                            </td>
+                        </tr>
+                    </th:block>
+
+                    </tbody>
+                </table>
+
+
+            </th:block>
+
+
+            <div class="row text-center">
+                <!--페이징-->
+                <div class="col">
+                    <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
+                        <ul class="pagination justify-content-center">
+                            <li th:if="${pageResponseDTO.prev}" class="paginate_button previous "
+                                aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                <a class="page-link" th:data-num="${pageResponseDTO.start -1}">Previous</a>
+                            </li>
+
+                            <!--thymleaf에는 순서를 표기하는 #numbers.sequence가 있다.-->
+                            <th:block
+                                    th:each="i: ${#numbers.sequence(pageResponseDTO.start,pageResponseDTO.end)}">
+                                <li th:class="${pageResponseDTO.page == i} ? 'paginate_button active':''"
+                                    aria-controls="dataTables-example" tabindex="0">
+                                    <a class="page-link" th:data-num="${i}">[[${i}]]</a>
+                                </li>
+                            </th:block>
+
+                            <li th:if="${pageResponseDTO.next}" class="paginate_button next"
+                                aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                <a class="page-link" th:data-num="${pageResponseDTO.end +1}">Next</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div> <!--페이징 처리-->
+
+
+            </div> <!--col -->
+
+
+        </div>
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form action="/replyblog/modify" method="post" th:object="${dto}" class="repform" >
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+
+
+                            <div class="mb-3">
+                                <input name="blog_num" type="hidden" th:value="${blogDTO.num}">
+                                <input class="replynum" type="text" name="num" value="">
+                                <label for="content" class="form-label" >내용</label>
+                                <input id="content" class="replycontent" type="text" name="content">
+                                </input>
+                            </div>
+                            <div class="mb-3">
+                                <label for="writer" class="form-label" >작성자</label>
+                                <input type="text" class="form-control" id="writer" placeholder="이곳작성자">
+                            </div>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+
+        <script th:inline="javascript">
+
+
+            $(document).ready(function () {
+
+                let replyDTO = [[${pageResponseDTO.dtoList}]]
+
+                console.log(replyDTO)
+                document.querySelector(".pagination").addEventListener("click", function (e) {
+
+                    e.preventDefault();
+                    e.stopPropagation();
+
+                    let target = e.target;
+
+
+                    if (target.tagName !== 'A') {
+                        return;
+                    }
+
+                    let num = target.getAttribute("data-num");
+                    // console.log(num);
+
+                    let formObj = document.querySelector(".formObj");
+
+                    formObj.innerHTML += `<input type="hidden" name="page" value="${num}">`;
+
+
+                    formObj.submit();
+
+                })
+
+                $(".replyModify").on("click", function () {
+                    console.log($(this).val())
+
+                    for (let i = 0; i < replyDTO.length; i++) {
+                        if (replyDTO[i].num == $(this).val()) {
+                            console.log("홍길동" + replyDTO[i].content)
+                            $(".replycontent").val(replyDTO[i].content) //모달창에 값넣기
+                            $(".replynum").val(replyDTO[i].num)
+                            //그외 댓글을 저장할려고 할때 필요한 값들 추가하기
+                            //들어가서 본문번호를 찾아서 그번호를 가지고 컨트롤러 - 서비스에서 findbyid(수정할댓글번호) 찾아서 그값에다가 변경할내용set해서 변경하기 수정하기
+
+                        }
+
+
+                    }
+                })
+
+            });
+
+
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+    </div>
 
 </body>
 </html>
