--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -52,9 +52,17 @@
                     <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError"></p>
                 </div>
 
+                <div class="mb-3">
+                    <label for="role" class="form-label"> 권한 </label>
+                    <select th:field="*{role}" class="form-select" required>
+                        <option th:value="USER"> 일반 사용자 </option>
+                        <option th:value="ADMIN"> 관리자 </option>
+                    </select>
+                    <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError"></p>
+                </div>
+
                 <div class="text-center mt-4">
                     <button class="btn btn-primary">가입</button>
-                    <a type="button" href="/blog/list" class="btn btn-primary">목록</a>
                 </div>
             </form>
         </div>
