낼 와서 프로필 수정 만들자

--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -24,7 +24,7 @@
             <input type="text" id="role" th:value="${accountDTO.role}" class="form-control" readonly>
 
             <div class="text-center mt-4">
-                <a href="/account/" class="btn btn-primary"> 프로필 수정 </a>
+                <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
             </div>
         </div>
     </div>
