NoticeEvent 생성 및 구축중 blog CSS 적용을 위한 중간 푸쉬

--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -17,7 +17,8 @@
             <div class="col shadow">
                 <div>
                     <span> 여행 계획</span>
-                <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1" checked>
+                    <input type="hidden" name="readCount" value=0 >
+                    <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1" checked>
                 <label class="btn" for="option1">당일치기</label>
 
                 <input type="radio" class="btn-check" name="schedule" id="option2" value="2" autocomplete="off">
