이걸로 한번 해보세요

--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -30,6 +30,7 @@
 
             <div class="text-center mt-4">
                 <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
+                <a href="/account/edit" class="btn btn-primary"> 개인정보 수정</a>
             </div>
         </div>
     </div>
