NoticeEvent 생성 및 구축중 blog CSS 적용을 위한 중간 푸쉬

--- a/src/main/resources/templates/blog/detale.html
+++ b/src/main/resources/templates/blog/detale.html
@@ -22,7 +22,9 @@
         <div>내용
         </div>
         <div th:text="${blogDTO.content}">
+
         </div>
+        <div th:text="${blogDTO.readCount}"></div>
         <div>작성자
         </div>
         <div>
