--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -3,7 +3,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -18,33 +19,30 @@
 
             <nav class="navbar bg-body-tertiary">
                 <div class="container-fluid">
-                    <form class="d-flex formObj" role="search" action="/blog/list" method="get"
+                    <form class="d-flex formObj" role="search" action="/notice/list" method="get"
                           th:object="${pageRequestDTO}">
 
                         <select name="type" th:field="*{type}" class="form-select" aria-label="Default select example">
 
                             <option value="t" selected>제목</option>
                             <option value="c">내용</option>
-                            <option value="w">작성자</option>
-                            <option value="y">도시</option>
                             <option value="tc">제목 + 내용</option>
-                            <option value="ty">제목 + 도시</option>
                         </select>
                         <input class="form-control me-2" name="keyword" type="search" placeholder="Search"
                                aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
 
-                    <a href="/blog/register" type="button" class="btn btn-dark">등록</a>
+                    <a href="/notice/register" type="button" class="btn btn-dark">등록</a>
                 </div>
 
             </nav>
 
-            <th:block th:if="${#lists.isEmpty(blogDTOPageResponseDTO.dtoList)}">
+            <th:block th:if="${#lists.isEmpty(noticeEventDTOPageResponseDTO.dtoList)}">
                 <h1>너님 글이 없음</h1>
             </th:block>
 
-            <th:block th:unless="${#lists.isEmpty(blogDTOPageResponseDTO.dtoList)}">
+            <th:block th:unless="${#lists.isEmpty(noticeEventDTOPageResponseDTO.dtoList)}">
                 <table class="table table-hover">
                     <thead>
                     <tr>
@@ -55,7 +53,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <th:block th:each="list: ${blogDTOPageResponseDTO.dtoList}">
+                    <th:block th:each="list: ${noticeEventDTOPageResponseDTO.dtoList}">
                         <tr>
                             <td>
                                 <div>
@@ -64,7 +62,9 @@
 
                             </td>
                             <td>
-                                <a th:href="@{/blog/detale(num=${list.num})}">
+                                <a th:href="@{/notice/detale(num=${list.num})}"
+                                th:data-num="${list.num}" class="countappend"
+                                >
                                     [[${list.title}]]
                                 </a>
 
@@ -90,23 +90,24 @@
                 <div class="col">
                     <div class="dataTables_paginate paging_simple_numbers" id="dataTables-example_paginate">
                         <ul class="pagination justify-content-center">
-                            <li th:if="${blogDTOPageResponseDTO.prev}" class="paginate_button previous "
+                            <li th:if="${noticeEventDTOPageResponseDTO.prev}" class="paginate_button previous "
                                 aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                                <a class="page-link" th:data-num="${blogDTOPageResponseDTO.start -1}">Previous</a>
+                                <a class="page-link"
+                                   th:data-num="${noticeEventDTOPageResponseDTO.start -1}">Previous</a>
                             </li>
 
                             <!--thymleaf에는 순서를 표기하는 #numbers.sequence가 있다.-->
                             <th:block
-                                    th:each="i: ${#numbers.sequence(blogDTOPageResponseDTO.start,blogDTOPageResponseDTO.end)}">
-                                <li th:class="${blogDTOPageResponseDTO.page == i} ? 'paginate_button active':''"
+                                    th:each="i: ${#numbers.sequence(noticeEventDTOPageResponseDTO.start,noticeEventDTOPageResponseDTO.end)}">
+                                <li th:class="${noticeEventDTOPageResponseDTO.page == i} ? 'paginate_button active':''"
                                     aria-controls="dataTables-example" tabindex="0">
                                     <a class="page-link" th:data-num="${i}">[[${i}]]</a>
                                 </li>
                             </th:block>
 
-                            <li th:if="${blogDTOPageResponseDTO.next}" class="paginate_button next"
+                            <li th:if="${noticeEventDTOPageResponseDTO.next}" class="paginate_button next"
                                 aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                                <a class="page-link" th:data-num="${blogDTOPageResponseDTO.end +1}">Next</a>
+                                <a class="page-link" th:data-num="${noticeEventDTOPageResponseDTO.end +1}">Next</a>
                             </li>
                         </ul>
                     </div>
@@ -114,8 +115,6 @@
 
 
             </div> <!--col -->
-
-
 
 
         </div>
@@ -148,6 +147,40 @@
                     formObj.submit();
 
                 })
+
+
+                $(".countappend").on("click", function (e) {
+
+
+                    e.preventDefault()
+                    //조회수를 증가시킨다. // 일반적인 컨트롤러에서는 증가시키던걸 빼고
+                    // 병렬 그러니까 따로 증가시킨다.
+
+                    //증가시키는 컨트롤러로 접속한다.
+
+                    let num = $(this).data("num")
+                    console.log($(this).data("num"))
+
+                    $.ajax({
+                        url: "/notice/countappend?num=" + num,
+                        type: "get",
+                        dataType: "text",
+                        success: function (data) {
+                            console.log("성공")
+                            console.log(data)
+                            if (data == "success") {
+                                location.href = "/notice/detale?num=" + num
+                            }
+
+                        },
+                        error: function (data) {
+                            console.log("fail")
+                            console.log(data.responseText)
+                        }
+
+                    })
+                })
+
 
             });
 
