--- a/src/main/resources/templates/account/edit.html
+++ b/src/main/resources/templates/account/edit.html
@@ -24,7 +24,7 @@
 
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">새 비밀번호 확인</label>
-                <input type="password" id="confirmPassword" class="form-control" name="newPasswordConfirm" required >
+                <input type="password" id="confirmPassword" class="form-control" name="confirmPassword" required >
             </div>
 
             <div class="text-center mt-4">
