--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -3,7 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -17,34 +20,27 @@
             <div class="col shadow">
                 <div>
                     <span> 여행 계획</span>
-                    <input type="hidden" name="readCount" value=0 >
-                    <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1" checked>
-                <label class="btn" for="option1">당일치기</label>
+                    <input type="hidden" name="readCount" value=0>
+                    <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1"
+                           checked>
+                    <label class="btn" for="option1">당일치기</label>
 
-                <input type="radio" class="btn-check" name="schedule" id="option2" value="2" autocomplete="off">
-                <label class="btn" for="option2">1박 2일</label>
+                    <input type="radio" class="btn-check" name="schedule" id="option2" value="2" autocomplete="off">
+                    <label class="btn" for="option2">1박 2일</label>
 
-                <input type="radio" class="btn-check" name="schedule" id="option3" value="3" autocomplete="off">
-                <label class="btn" for="option3">2박 3일</label>
-                    <span>일행</span>
-                    <input type="radio" class="btn-check" name="companion" id="option4" value="1" autocomplete="off" checked>
-                    <label class="btn" for="option4">혼자 여행</label>
+                    <input type="radio" class="btn-check" name="schedule" id="option3" value="3" autocomplete="off">
+                    <label class="btn" for="option3">2박 3일</label>
 
-                    <input type="radio" class="btn-check" name="companion" id="option5" value="2"  autocomplete="off">
-                    <label class="btn" for="option5">커플 여행</label>
-
-                    <input type="radio" class="btn-check" name="companion" id="option6" value="3" autocomplete="off">
-                    <label class="btn" for="option6">가족 여행</label>
                 </div>
                 <div class="mb-3">
                     <label for="title" class="form-label">제목</label>
                     <input type="text" class="form-control" th:field="*{title}" id="title" placeholder="조잘조잘 제목 부분">
-                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"  class="fieldError">
+                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="fieldError">
                 </div>
                 <div class="mb-3">
                     <label for="content" class="form-label">내용</label>
                     <textarea class="form-control" id="content" rows="3" th:field="*{content}"></textarea>
-                    <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}"  class="fieldError">
+                    <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="fieldError">
                     <div class="text-center mt-4">
                         <button type="submit" class="btn btn-light">저장</button>
                         <a type="button" href="/blog/list" class="btn btn-light">목록</a>
@@ -53,10 +49,131 @@
                 </div>
             </div>
 
+            <div class="col shadow">
+
+                <h3>장소 검색</h3>
+
+
+                <div>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </div>
+                <div>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </div>
+
+            </div>
+            <div class="col shadow">
+
+                <div class="checker">
+                    <div>
+                        도시
+                    </div>
+                    <div>
+                        지도
+                    </div>
+
+                </div>
+                <div class="city">
+                    <div>
+
+                    <input type="radio" class="btn-check citychecker" id="city1" name="city" value="서울특별시" checked>
+                    <label class="btn" for="city1">서울특별시</label>
+
+                    <input type="radio" class="btn-check citychecker" id="city2" name="city" value="부산광역시">
+                    <label class="btn" for="city2">부산광역시</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city3" name="city" value="대구광역시">
+                        <label class="btn" for="city3">대구광역시</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city4" name="city" value="인천광역시">
+                        <label class="btn" for="city4">인천광역시</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city5" name="city" value="광주광역시">
+                        <label class="btn" for="city5">광주광역시</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city6" name="city" value="대전광역시">
+                        <label class="btn" for="city6">대전광역시</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city7" name="city" value="울산광역시">
+                        <label class="btn" for="city7">울산광역시</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city8" name="city" value="세종특별자치시">
+                        <label class="btn" for="city8">세종특별자치시</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city9" name="city" value="경기도">
+                        <label class="btn" for="city9">경기도</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city10" name="city" value="강원특별자치도">
+                        <label class="btn" for="city10">강원특별자치도</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city11" name="city" value="충청북도">
+                        <label class="btn" for="city11">충청북도</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city12" name="city" value="충청남도">
+                        <label class="btn" for="city12">충청남도</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city13" name="city" value="전북특별자치도">
+                        <label class="btn" for="city13">전북특별자치도</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city14" name="city" value="전라남도">
+                        <label class="btn" for="city14">전라남도</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city15" name="city" value="경상북도">
+                        <label class="btn" for="city15">경상북도</label>
+
+                        <input type="radio" class="btn-check citychecker" id="city16" name="city" value="경상남도">
+                        <label class="btn" for="city16">경상남도</label>
+                    </div>
+                    <div>
+
+                        <input type="radio" class="btn-check citychecker" id="city17" name="city" value="제주특별자치도">
+                        <label class="btn" for="city17">제주특별자치도</label>
+
+                    </div>
+
+
+                </div>
+                <div class="map"></div>
+
+
+
+            </div>
 
         </div>
     </form>
 </div>
+
+<script th:inline="javascript">
+
+
+
+    $(document).ready(function () {
+        $(".map").hide()
+        $(".citychecker").on("click",function (){
+            $(".city").hide()
+            $(".map").show()
+
+        })
+
+
+    })
+</script>
 
 </body>
 </html>
