--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -21,6 +21,8 @@
                 <div>
                     <span> 여행 계획</span>
                     <input type="hidden" name="readCount" value=0>
+                    <input type="hidden" name="recommendCount" value=0>
+
                     <input type="radio" class="btn-check" name="schedule" id="option1" autocomplete="off" value="1"
                            checked>
                     <label class="btn" for="option1">당일치기</label>
