--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-6 offset-3">
             <form action="/account/register" th:object="${accountDTO}" method="post">
-                <h3>회원 가입</h3> </br>
+                <h2 class="text-center">회원 가입</h2> </br>
 
                 <div class="mb-3">
                     <label for="email" class="form-label">아이디/이메일</label>
