--- a/src/main/resources/templates/account/find-email.html
+++ b/src/main/resources/templates/account/find-email.html
@@ -10,13 +10,13 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col-6 offset-3">
-                <h2 class="text-center"> 이메일 찾기</h2> </br>
+                <h2 class="text-center"> 이메일 찾기</h2>
                 <form action="/account/find-email" method="post">
-                    <div class="mb-3">
+                    <div class="mb-3 mb-3">
                         <label for="name">이름</label>
                         <input type="text" id="name" name="name" class="form-control" required>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 mb-3">
                         <label for="phone">전화번호</label>
                 <input type="text" id="phone" name="phone" class="form-control" required>
             </div>
