--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -30,9 +30,15 @@
                     <input type="password" id="password" name="password" class="form-control" required />
                 </div>
 
-                <div class="text-center mt-3">
-                    <button class="btn btn-success">로그인</button>
-                    <a type="button" href="/account/list" class = "btn btn-secondary"> 회원목록 </a>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-auto text-center">
+                            <!--<a type="button" href="/account/list" class = "btn btn-secondary"> 회원목록 </a> -->
+                            <a type="button" href="/account/register" class="btn btn-secondary"> 회원가입</a>
+                            <button class="btn btn-success">로그인</button>
+                            <a type="button" href="/account/find-email" class="btn btn-primary"> 이메일 찾기</a>
+                        </div>
+                    </div>
                 </div>
                 </form>
         </div>
