--- a/src/main/resources/templates/account/modifyprofile.html
+++ b/src/main/resources/templates/account/modifyprofile.html
@@ -24,7 +24,7 @@
 
                         <div class="text-center mt-4">
                             <button type="submit" class="btn btn-success">저장</button>
-                            <a href="/mypage" class="btn btn-secondary">취소</a>
+                            <a href="/account/mypage" class="btn btn-secondary">취소</a>
                         </div>
                     </form>
             </div>
