--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>마이페이지</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div class="container">
     <div class = "row mt-5">
         <div class="col-6 offset-3">
-            <h2 class="text-center">My Page</h2> </br>
+            <h2 class="text-center">My Page</h2>
 
             <!-- 메시지 표시 영역 -->
             <div th:if="${message}" class="alert alert-success" th:text="${message}"></div>
@@ -27,8 +29,29 @@
             <div class="text-center mt-4">
                 <a href="/account/modifyprofile" class="btn btn-primary"> 정보 수정 </a>
                 <a href="/account/edit" class="btn btn-secondary"> 비밀번호 변경</a>
-               <!-- <a href="/account/delete" class="btn btn-danger"> 회원 탈퇴</a> -->
+                <button type="button" class="deldel btn btn-danger" th:value="${accountDTO.email}">회원 탈퇴</button>
             </div>
+            <form class="formObjj" method="post" action="/account/delete">
+
+            </form>
+            <script>
+                $(".deldel").on("click", function () {
+                    if(confirm('정말로 이 회원을 탈퇴시키겠습니까?')){
+                        console.log("홍길동")
+                        console.log($(this).val())
+
+                        let str = `<input type="hidden" name="email" value="${$(this).val()}"/>`
+                        $(".formObjj").append(str)
+                        $(".formObjj").submit()
+
+                    }else {
+                        console.log("취소")
+                        return false;
+                    }
+
+                })
+
+            </script>
         </div>
     </div>
 </div>
