--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -8,19 +8,10 @@
 </head>
 <body>
 <div class="container">
-
-    <script th:inline="javascript">
-        let msg = [[${msg}]]
-
-        if(msg != null){
-            alert(msg)
-        }
-    </script>
-
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-6 offset-3">
             <form action="/account/register" th:object="${accountDTO}" method="post">
-                <h2 class="text-center">회원 가입</h2> </br>
+                <h2 class="text-center">회원 가입</h2>
 
                 <div class="mb-3">
                     <label for="email" class="form-label">아이디/이메일</label>
@@ -52,6 +43,9 @@
                     <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError"></p>
                 </div>
 
+                <input type="hidden" name="role" value="USER">
+
+                <!--
                 <div class="mb-3">
                     <label for="role" class="form-label"> 권한 </label>
                     <select th:field="*{role}" class="form-select" required>
@@ -59,12 +53,20 @@
                         <option th:value="ADMIN"> 관리자 </option>
                     </select>
                     <p th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="fieldError"></p>
-                </div>
+                </div> -->
 
                 <div class="text-center mt-4">
                     <button class="btn btn-primary">가입</button>
                 </div>
             </form>
+
+            <script th:inline="javascript">
+                let msg = [[${msg}]]
+
+                if(msg != null){
+                    alert(msg)
+                }
+            </script>
         </div>
     </div>
 </div>
